# sflow-parser

./: .codecov-setup.md  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  codecov.yml  renovate.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  claude-review.yml  claude.yml  coverage.yml
benches/: parser_benchmark.rs
src/: lib.rs  models.rs  parser.rs
src/models/: core.rs  counter_records.rs  flow_records.rs  mod.rs  record_counters.rs  record_flows.rs
src/parser/: datagram.rs  error.rs  mod.rs  parser_counters.rs  parser_flows.rs
src/parsers/: datagram.rs  mod.rs  parser_counters.rs  parser_flows.rs
tests/: integration_test.rs  serde_test.rs  specs_test.rs  unit_tests.rs
tests/data/: README.md  sflow.pcap
tests/fuzz/: Cargo.toml  README.md
tests/fuzz/fuzz_targets/: fuzz_multiple.rs  fuzz_single.rs  fuzz_structured.rs
tests/specs/: README.md  SPEC_ISSUES.md  mod.rs  specs_validation.rs
tests/specs/specs/: sflow_application.txt  sflow_drops.txt  sflow_http.txt  sflow_openflow.txt  sflow_transit.txt  sflow_tunnels.txt
tests/unit/: core_types.rs  counter_parsers.rs  counter_records.rs  enums.rs  flow_parsers.rs  flow_records.rs  mod.rs  parser_comprehensive.rs  parser_counters.rs  parser_error_handling.rs  parser_flows.rs  parser_primitives.rs  record_counters.rs  record_flows.rs
tests/unit/comprehensive/: counters.rs  flows.rs  helpers.rs  mod.rs  samples.rs
tests/validation/: mod.rs  parser_spec.rs  sflowtool_validation.rs  specs_parser_lib_ast.rs  specs_validation.rs  validation.rs
