[package]
name = "sflow-parser"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = "InMon sFlow v5 Parser"
repository = "https://github.com/nxthdr/sflow-parser"
homepage = "https://nxthdr.dev"
keywords = ["sflow", "parser"]
edition = "2021"
exclude = [
    ".github/*",
    "tests/*",
    "renovate.json",
]

[dev-dependencies]
regex = "1"
ureq = "3"
criterion = "0.5"
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"

[[bench]]
name = "parser_benchmark"
harness = false
