[package]
name = "sflow-parser"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = "InMon sFlow v5 Parser"
repository = "https://github.com/nxthdr/sflow-parser"
homepage = "https://nxthdr.dev"
keywords = ["sflow", "parser"]
edition = "2021"
exclude = [
    ".github/*",
    "benches/*",
    "tests/*",
    "codecov.yml",
    "renovate.json",
]

[dev-dependencies]
criterion = "0.5"
regex = "1"
syn = { version = "2", features = ["full", "parsing"] }
ureq = "3"

[[bench]]
name = "parser_benchmark"
harness = false
