[package]
name = "sflow-parser"
version = "0.5.0"
license = "MIT"
readme = "README.md"
description = "InMon sFlow v5 Parser"
repository = "https://github.com/nxthdr/sflow-parser"
homepage = "https://nxthdr.dev"
keywords = ["sflow", "parser"]
edition = "2021"
exclude = [
    ".github/*",
    "benches/*",
    "tests/*",
    "codecov.yml",
    "renovate.json",
]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
criterion = "0.7"
regex = "1"
syn = { version = "2", features = ["full", "parsing"] }
ureq = "3"
serde_json = "1.0"

[[bench]]
name = "parser_benchmark"
harness = false
